--- a/NUCLEO-U083RC.ioc
+++ b/NUCLEO-U083RC.ioc
@@ -1,4 +1,12 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_TEMPSENSOR
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,RankArg-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SelectedChannel,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.RankArg-0\#ChannelRegularConversion=ADC_REGULAR_RANK_1
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLINGTIME_COMMON_1
+ADC1.SelectedChannel=ADC_CHANNEL_TEMPSENSOR
+ADC1.master=1
 BSP_IP_NAME=NUCLEO-U083RC
 CAD.formats=[]
 CAD.pinconfig=Dual
@@ -8,30 +16,38 @@ GPIO.groupedBy=
 KeepUserPlacement=false
 Mcu.CPN=STM32U083RCT6
 Mcu.Family=STM32U0
-Mcu.IP0=CORTEX_M0+
-Mcu.IP1=DEBUG
-Mcu.IP2=NUCLEO-U083RC
-Mcu.IP3=NVIC
-Mcu.IP4=PWR
-Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IPNb=8
+Mcu.IP0=ADC1
+Mcu.IP1=CORTEX_M0+
+Mcu.IP2=DEBUG
+Mcu.IP3=NUCLEO-U083RC
+Mcu.IP4=NVIC
+Mcu.IP5=PWR
+Mcu.IP6=RCC
+Mcu.IP7=SPI1
+Mcu.IP8=SYS
+Mcu.IP9=TIM2
+Mcu.IPNb=11
 Mcu.Name=STM32U083RCTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=VP_PWR_VS_SECSignals
-Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin12=VP_NUCLEO-U083RC_VS_BSP_COMMON
+Mcu.Pin10=PA7
+Mcu.Pin11=PA13 (SWDIO)
+Mcu.Pin12=PA14 (SWCLK)
+Mcu.Pin13=VP_ADC1_TempSens_Input
+Mcu.Pin14=VP_PWR_VS_SECSignals
+Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin16=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin17=VP_NUCLEO-U083RC_VS_BSP_COMMON
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA5
-Mcu.Pin8=PA13 (SWDIO)
-Mcu.Pin9=PA14 (SWCLK)
-Mcu.PinsNb=13
+Mcu.Pin5=PA1
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA5
+Mcu.Pin9=PA6
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32U083RCTx
@@ -49,6 +65,8 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_2
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
+PA1.Mode=Full_Duplex_Master
+PA1.Signal=SPI1_SCK
 PA13\ (SWDIO).GPIOParameters=GPIO_Label
 PA13\ (SWDIO).GPIO_Label=SWDIO
 PA13\ (SWDIO).Locked=true
@@ -64,6 +82,11 @@ PA2.Signal=USART2_TX
 PA3.Locked=true
 PA3.Signal=USART2_RX
 PA5.Locked=true
+PA5.Signal=S_TIM2_CH1_ETR
+PA6.Mode=Full_Duplex_Master
+PA6.Signal=SPI1_MISO
+PA7.Mode=Full_Duplex_Master
+PA7.Signal=SPI1_MOSI
 PC13.Locked=true
 PC14-OSC32_IN.GPIOParameters=GPIO_Label
 PC14-OSC32_IN.GPIO_Label=OSC32_IN
@@ -125,7 +148,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,false-0--NUCLEO-U083RC-true-HAL-true,0-MX_CORTEX_M0+_Init-CORTEX_M0+-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,0-MX_CORTEX_M0+_Init-CORTEX_M0+-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true,false-0--NUCLEO-U083RC-true-HAL-true
 RCC.ADCFreq_Value=56000000
 RCC.AHBFreq_Value=56000000
 RCC.APBFreq_Value=56000000
@@ -164,11 +187,28 @@ RCC.USART1Freq_Value=56000000
 RCC.USART2Freq_Value=56000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=112000000
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SPI1.CRCCalculation=SPI_CRCCALCULATION_DISABLE
+SPI1.CalculateBaudRate=28.0 MBits/s
+SPI1.DataSize=SPI_DATASIZE_8BIT
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,CRCCalculation
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period
+TIM2.Period=1000-1
+TIM2.Prescaler=56-1
+VP_ADC1_TempSens_Input.Mode=IN-TempSens
+VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
 VP_NUCLEO-U083RC_VS_BSP_COMMON.Mode=COMMON
 VP_NUCLEO-U083RC_VS_BSP_COMMON.Signal=NUCLEO-U083RC_VS_BSP_COMMON
 VP_PWR_VS_SECSignals.Mode=Security/Privilege
 VP_PWR_VS_SECSignals.Signal=PWR_VS_SECSignals
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=NUCLEO-U083RC
 boardIOC=true
