--- a/NUCLEO-U083RC.ioc
+++ b/NUCLEO-U083RC.ioc
@@ -196,8 +196,9 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,CRCCalculation
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,AutoReloadPreload
 TIM2.Period=1000-1
 TIM2.Prescaler=56-1
 VP_ADC1_TempSens_Input.Mode=IN-TempSens
